Fixed logo margins on mobile.

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,7 +14,7 @@ body
     max-width: 700px
     margin-bottom: -130px
     margin-top: 100px
-    @media screen and (max-width: 415px)
+    @media screen and (max-width: 829px)
         margin-bottom: -50px
         margin-top: -25px
     @media screen and (min-width: 830px)
@@ -37,6 +37,8 @@ body
     word-break: break-word
     @media screen and (max-width: 415px)
         margin: 0px 0px 50px 0px
+    @media screen and (max-width: 615px)
+        width: 90vw
 
 .card-list
     display: flex
